Form Formatting Complete 	- Form is now compeltely formatted completely 	- When shrinks it wraps correctly

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
 @import url(https://fonts.google.com/specimen/Oswald);
-@import url(https://fonts.google.com/specimen/Rubik+80s+Fade);
 
 :root {
     color: white;
-    font-family: 'Oswald';
+    font-family: "Oswald";
     min-height: 100vh;
-    --RubiksFamily-font-family: "Rubiks 80s Fade";
+    --paddingForRight--padding: 30px 30px 0px 30px;
     --left-width: 30vw; /* for left side images + content */
 }
 
@@ -44,7 +43,6 @@ img[src="images/odin-lined.png"] {
     opacity: .7;
     text-align: center;
     justify-content: center;
-    font-family: var(--RubiksFamily-font-family);
 }
 
 .credit {
@@ -54,37 +52,56 @@ img[src="images/odin-lined.png"] {
     width: var(--left-width);
     top: 95vh;
     font-size: 2vmin;
-    font-family: var(--RubiksFamily-font-family);
     text-align: center;
 }
 
 .rightSide{
     display: flex;
+    color: white;
     flex-direction: column;
     width: 100%;
     justify-content: center;
     background-color: black;
+    font-size: 18px;
 }
 
 .information {
-    padding: 30px;
+    padding: var(--paddingForRight--padding)
 }
 
 .formContainer {
-    padding: 30px;
-    padding-bottom: 0px;
+    padding: var(--paddingForRight--padding);
+    border: solid;
+    border-color: white;
+    padding-bottom: 30px;
 }
 
 form {
     display: flex;
-    flex-direction: column;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
+.leftColumn {
+    display: flex;
+    flex-direction: column;
+    min-width: 30%;
+}
+
+.rightColumn {
+    display: flex;
+    flex-direction: column;
+    min-width: 30%;
+}
+
+input {
+    width: 80%;
+}
 
 .submitLogin {
     gap: 40px;
-    padding-top: 0px;
-    padding: 30px;
+    padding: var(--paddingForRight--padding);
+    padding-top: 2px;
 }
 
 .submitBtn {
@@ -104,10 +121,13 @@ a:visited {
     text-decoration: none;
 }
 
+input:focus {
+    border: red;
+}
+
 button {
     background-color: lightcoral;
     border-radius: 4px;
-    border: none;
     padding: 8px;
     padding-left: 30px;
     padding-right: 30px;
